# balloon-simulator

./: README.md  pyproject.toml
balloon_simulator/: balloon.py  constants.py  simulator.py
balloon_simulator/atmosphere/: __init__.py  base.py  isa.py  state.py
notebooks/: isa_atmosphere.ipynb  simple_balloon.ipynb
